# CatPred

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  environment.yml  predict.py  pyproject.toml  train.py
.github/workflows/: docs.yml  test.yml
docs/: conf.py  index.md
docs/api/: catpred.md
scripts/: baseline_analysis.py
src/catpred/: __init__.py  args.py  multitask_utils.py  runner.py  utils.py
src/catpred/data/: __init__.py  data.py  esm_utils.py  gvp_utils.py  scaffold.py  utils.py
src/catpred/features/: __init__.py  featurization.py
src/catpred/models/: __init__.py  gvp_models.py  model.py  mpn.py  transformer_models.py
src/catpred/models/en_transformer/: __init__.py  en_transformer.py
src/catpred/train/: __init__.py  cross_validate.py  evaluate.py  make_predictions.py  molecule_fingerprint.py  predict.py  run_training.py  train.py
src/catpred/uncertainty/: __init__.py  uncertainty_calibrator.py  uncertainty_estimator.py  uncertainty_evaluator.py  uncertainty_predictor.py
tests/: conftest.py  test_multitask_utils.py  test_runner.py  test_utils.py
